[gd_scene load_steps=9 format=3 uid="uid://duxefvqkae66b"]

[ext_resource type="Script" path="res://Characters/crab.gd" id="1_2yvf1"]
[ext_resource type="PackedScene" uid="uid://cl6ikerax3saf" path="res://Characters/crab.glb" id="1_koglg"]
[ext_resource type="PackedScene" uid="uid://bj8f44agdkdp5" path="res://Models/arrow.tscn" id="3_28wew"]
[ext_resource type="Script" path="res://CameraController.gd" id="4_80ssi"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jh84w"]
radius = 15.0

[sub_resource type="Animation" id="Animation_vl3aq"]
resource_name = "breathe"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("crab:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(30, 30, 30), Vector3(30, 34, 30), Vector3(30, 30, 30)]
}

[sub_resource type="Animation" id="Animation_cqtuh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("crab:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(30, 30, 30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0n5pw"]
_data = {
"RESET": SubResource("Animation_cqtuh"),
"breathe": SubResource("Animation_vl3aq")
}

[node name="crab" type="Node3D"]
script = ExtResource("1_2yvf1")

[node name="crab" parent="." instance=ExtResource("1_koglg")]
transform = Transform3D(30, 0, 0, 0, 32, 0, 0, 0, 30, 0, 0, 0)

[node name="Arrow" parent="." instance=ExtResource("3_28wew")]
transform = Transform3D(0.896123, 0, 0.443806, 0, 1, 0, -0.443806, 0, 0.896123, -1.09278, 6.91511, -1.78034)

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_jh84w")

[node name="CameraController" type="RemoteTransform3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.926699, 0.375803, 0, -0.375804, 0.926698, -0.134146, 6.24104, 10.0079)
script = ExtResource("4_80ssi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0n5pw")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered" flags=18]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited" flags=18]
